Added support for storing values in localStorage.